# llm-arithmetic-compressor

./: .gitignore  LICENSE  README.md  publish.sh  pyproject.toml  report.md
.github/workflows/: tests.yml
src/llm_arithmetic_compressor/: __init__.py  arithmetic.py  benchmark.py  cli.py  codec.py  header.py  model.py  probability.py
tests/: test_arithmetic.py  test_benchmark.py  test_codec.py  test_probability.py
